--- a/samples/ravendb/simple/Raven_7/Client/Client.csproj
+++ b/samples/ravendb/simple/Raven_7/Client/Client.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;netcoreapp3.1;net48</TargetFrameworks>
+    <TargetFrameworks>net48</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
     <PackageReference Include="NServiceBus" Version="7.*" />
+    <PackageReference Include="NServiceBus.Transport.Msmq" Version="1.1.0" />
   </ItemGroup>
 </Project>
