--- a/samples/ravendb/simple/Raven_7/Client/Client.csproj
+++ b/samples/ravendb/simple/Raven_7/Client/Client.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
-    <PackageReference Include="NServiceBus" Version="7.*" />
+    <PackageReference Include="NServiceBus" Version="7.4.3" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.3.0" />
     <PackageReference Include="NServiceBus.Transport.Msmq" Version="1.1.0" />
   </ItemGroup>
 </Project>
