--- a/samples/ravendb/simple/Raven_7/Server/Server.csproj
+++ b/samples/ravendb/simple/Raven_7/Server/Server.csproj
@@ -5,9 +5,13 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NServiceBus.CastleWindsor" Version="7.0.0" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.3.0" />
+    <PackageReference Include="NServiceBus.NLog" Version="3.0.0" />
+    <PackageReference Include="System.Buffers" Version="4.5.1" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
-    <PackageReference Include="NServiceBus" Version="7.8.0" />
-    <PackageReference Include="NServiceBus.RavenDB" Version="7.1.1" />
+    <PackageReference Include="NServiceBus" Version="7.4.3" />
+    <PackageReference Include="NServiceBus.RavenDB" Version="7.0.1" />
     <PackageReference Include="NServiceBus.Transport.Msmq" Version="1.1.0" />
     <PackageReference Include="RavenDB.Client" Version="5.4.5" />
   </ItemGroup>
